[IMP] WIP add algolia search

--- a/shop/app/views/snippets/nav.liquid
+++ b/shop/app/views/snippets/nav.liquid
@@ -31,8 +31,9 @@
             <span class="badge"><span class="snipcart-total-items">&nbsp;</span></span>
           </a>
         </li>
+        {% include 'search' %}
       </ul>
     </div>
-
   </div>
 </nav>
+
