--- a/shop/app/views/pages/layouts/default.liquid
+++ b/shop/app/views/pages/layouts/default.liquid
@@ -19,15 +19,19 @@ is_layout: false
 
     {{ 'bootstrap.css' | stylesheet_tag }}
     {{ 'application.css' | stylesheet_tag }}
+    
 
     {% include 'theme_css' %}
 
     {% seo %}
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+     <script src="https://cdn.jsdelivr.net/hogan.js/3.0/hogan.min.js"></script>
+     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
     {% include 'nav' %}
+    
 
     {% include 'news_updates_alert' %}
 
@@ -66,14 +70,20 @@ is_layout: false
         </div>
       </div>
     </footer>
-
+       <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+       <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
+    
     {{ 'jquery.min.js' | javascript_tag }}
     {{ 'bootstrap.min.js' | javascript_tag }}
     {{ 'application.js' | javascript_tag }}
+    {{ 'algo.js' | javascript_tag }}
+    {{ 'auto.js' | javascript_tag }}
 
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <script type="text/javascript" src="https://cdn.snipcart.com/scripts/snipcart.js" id="snipcart" data-api-key="{{ site.metafields.snipcart.api_key }}"></script>
     <link type="text/css" href="https://cdn.snipcart.com/themes/base/snipcart.min.css" rel="stylesheet" />
+
+
   </body>
 </html>
