--- a/shop/app/views/snippets/search.liquid
+++ b/shop/app/views/snippets/search.liquid
@@ -3,7 +3,7 @@
        {{ 'auto.css' | stylesheet_tag }}
 
 
-        <form action="" method="GET" id="form">
+        <form action="http://0.0.0.0:5333/shop2" method="GET" id="form"> 
           <label for="search"></label>
           <input type="text" name="q" id="search" placeholder="Come on ! Choose " >
           <input type="submit" value="Search" id="submit" >
